[tool.poetry]
name = "date_fixer"
version = "0.1.0"
description = ""
authors = ["Felix Sargent <felix.sargent@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
deepface = "^0.0.93"
opencv-python = "^4.10.0.84"
pandas = "^2.2.3"
tf-keras = "^2.17.0"
piexif = "^1.1.3"
click = "^8.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
